implemented images and pdf

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="L-letter-icon.png" type="image/svg+xml">
 
   <!-- 
     - google font link
@@ -48,7 +48,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <!-- <img src="./assets/images/logo-dark.svg" width="64" height="24" alt="Leah home"> -->
+        <img src="./L-letter-icon.png" width="64" height="24" alt="Leah home">
       </a>
 
       <nav class="navbar" data-navbar>
@@ -149,7 +149,7 @@
         <div class="container">
 
           <figure class="hero-banner">
-            <img src="./assets/images/hero-banner.jpg" width="560" height="540" alt="Leah" class="w-100"
+            <img src="./DSC_0365_Original.jpg" width="560" height="540" alt="Leah" class="w-100"
               data-reveal="top">
 
           </figure>
@@ -382,7 +382,7 @@
                     my project and work there! 
                   </p>
 
-                  <a href="#" class="btn-text" style="color: #a07cc5">
+                  <a href="./Evans,Leah CCI Deliverables.pdf" class="btn-text" style="color: #a07cc5">
                     <span class="span">See Project</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -591,7 +591,7 @@
         © 2022 codewithsadee. All rights reserved.
       </p>
 
-      <ul class="social-list">
+      <!-- <ul class="social-list">
 
         <li>
           <a href="#" class="social-link">
@@ -623,7 +623,7 @@
           </a>
         </li>
 
-      </ul>
+      </ul> -->
 
     </div>
   </footer>
