--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="navbar-top">
           <a href="#" class="logo">
-            <img src="./assets/images/logo-light.svg" width="64" height="24" alt="Leah home">
+            <img src="./L-letter-icon.png" width="64" height="24" alt="Leah home">
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
@@ -78,16 +78,20 @@
           </li>
 
           <li>
+            <a href="#resume" class="navbar-link">Resume</a>
+          </li>
+
+          <li>
             <a href="#contact" class="navbar-link">Contact</a>
           </li>
 
         </ul>
 
-        <div class="wrapper">
+        <!-- <div class="wrapper">
           <a href="mailto:info@email.com" class="contact-link">leah28evans@gmail.com</a>
 
           <a href="tel:001234567890" class="contact-link">00 (123) 456 78 90</a>
-        </div>
+        </div> -->
 
         <ul class="social-list">
 
@@ -200,8 +204,6 @@
               </p>
             </div>
 
-            <!-- add fun images of myself here to the right-->
-
             <!-- <ul class="progress-list" data-reveal="right">
 
               <li class="progress-item">
@@ -264,14 +266,14 @@
 
           </div>
 
-          <ul class="grid-list">
+          <!-- <ul class="grid-list">
 
             <li data-reveal="bottom">
               <div class="about-card">
 
-                <!-- <div class="card-icon">
+                <div class="card-icon">
                   <img src="./assets/images/icon-1.svg" width="52" height="52" loading="lazy" alt="web design icon">
-                </div> -->
+                </div>
 
                 <h3 class="h4 card-title">Hobbies</h3>
 
@@ -285,9 +287,9 @@
             <li data-reveal="bottom" data-reveal-delay="0.25s">
               <div class="about-card">
 
-                <!-- <div class="card-icon">
+                <div class="card-icon">
                   <img src="./assets/images/icon-2.svg" width="52" height="52" loading="lazy" alt="mobile design icon">
-                </div> -->
+                </div>
 
                 <h3 class="h4 card-title">Beliefs</h3>
 
@@ -296,7 +298,7 @@
                 </p>
 
               </div>
-            </li>
+            </li> -->
 
             <!-- <li data-reveal="bottom" data-reveal-delay="0.5s">
               <div class="about-card">
@@ -415,21 +417,22 @@
 
                 <div class="card-content" data-reveal="right">
 
-                  <p class=" card-tag student-color">Student Organizations</p>
+                  <p class=" project-card-title student-color">Student Organizations</p>
 
                   <h3 class="h3 card-title">Robotics / IEEE</h3>
 
                   <p class="card-text">
-                    I am currently the Software Team Lead of UTk's IEEE Robotics Team. I am also vice-chair of 
-                    the overall UTk IEEE student organization. I love learning about robotics and how software 
-                    can work with hardware!
+                    I am currently the Software Team Lead of UTk's IEEE Robotics Team and vice-chair of 
+                    the overall UTk IEEE student organization. Being part of the robotics team allows me to 
+                    learn more about how software can impact electrical and mechanical hardware, which I 
+                    love learning about.
                   </p>
 
-                  <a href="#" class="btn-text" style="color: #3f78e0">
+                  <!-- <a href="#" class="btn-text" style="color: #3f78e0">
                     <span class="span">See Project</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                  </a>
+                  </a> -->
 
                 </div>
 
@@ -523,7 +526,7 @@
               </p>
             </div>
 
-           <a href="#" class="btn btn-primary">Download Resume</a>
+           <a href="#" class="btn btn-primary" download="">Download Resume</a>
 
           </div>
         </div>
@@ -545,11 +548,10 @@
                 <img src="./assets/images/icon-5.svg" width="44" height="44" loading="lazy" alt="envelop icon">
               </div>
 
-              <h2 class="h2 section-title">If you like what you see, let's work together.</h2>
+              <h2 class="h2 section-title">Contact</h2>
 
               <p class="section-text">
-                I bring rapid solutions to make the life of my clients easier. Have any questions? Reach out to me from
-                this contact form and I will get back to you shortly.
+                Feel free to send me a message with this form, and I'll get back to you shortly!
               </p>
 
             </div>
