added php form file

--- a/index.html
+++ b/index.html
@@ -386,8 +386,16 @@
                     my project and work there! 
                   </p>
 
-                  <a href="./Evans,Leah CCI Deliverables.pdf" class="btn-text internship-color" >
-                    <span class="span">See Project</span>
+                  <a href="./Evans,Leah CCI Report with Abstract.pdf" class="btn-text internship-color" >
+                    <span class="span">See Project Report</span>
+
+                    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                  </a>
+
+                  <br>
+
+                  <a href="./Evans_Leah Poster.jpg" class="btn-text internship-color" >
+                    <span class="span">See Project Poster</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                   </a>
@@ -528,7 +536,7 @@
               </p>
             </div>
 
-           <a href="#" class="btn btn-primary" download="">Download Resume</a>
+           <a href="./Resume2023.docx" class="btn btn-primary" download="">Download Resume</a>
 
           </div>
         </div>
@@ -559,7 +567,7 @@
 
             </div>
 
-            <form action="" class="contact-form" data-reveal="right">
+            <form action="form-data.php" method = "post" class="contact-form" data-reveal="right">
 
               <div class="input-wrapper">
                 <input type="text" name="name" placeholder="Name *" required class="input-field">
