--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
 
             </div>
 
-            <form action="form-data.php" method = "post" class="contact-form" data-reveal="right">
+            <form action="./form-data.php" method = "post" class="contact-form" data-reveal="right">
 
               <div class="input-wrapper">
                 <input type="text" name="name" placeholder="Name *" required class="input-field">
