--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
 
             </div>
 
-            <div id="form-messages"></div>
+            <!-- <div id="form-messages"></div> -->
 
             <form id="ajax-contact" action="./form-data.php" method = "post" class="contact-form" data-reveal="right">
 
