added formspree form endpoint

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
 
             <!-- <div id="form-messages"></div> -->
 
-            <form id="ajax-contact" action="./form-data.php" method = "post" class="contact-form" data-reveal="right">
+            <form action="https://formspree.io/f/xoqzoqqr" method = "POST" class="contact-form" data-reveal="right">
 
               <div class="input-wrapper">
                 <input type="text" name="name" placeholder="Name *" required class="input-field">
