--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="L-letter-icon.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="./assets/images/L-letter-icon.png" type="image/svg+xml">
 
   <!-- 
     - google font link
@@ -153,7 +153,7 @@
         <div class="container">
 
           <figure class="hero-banner">
-            <img src="./DSC_0365_Original.jpg" width="560" height="540" alt="Leah" class="w-100"
+            <img src="./assets/images/DSC_0365_Original.jpg" width="560" height="540" alt="Leah" class="w-100"
               data-reveal="top">
 
           </figure>
@@ -196,7 +196,6 @@
               <h2 class="h2 section-title">About Me</h2>
 
               <div class="about-txt" style="background-color: #fbf5f9">
-              <!-- add other interests like archery? -->
                <p class="section-text" data-reveal="left">
                  I am currently a computer science major and cybersecurity minor at University of Tennessee, Knoxville.
                 Having grown up in Knoxville, I love being able to call myself a Tennessee vol! I fell in love with
@@ -206,136 +205,7 @@
               </div>
             </div>
 
-            <!-- <ul class="progress-list" data-reveal="right">
-
-              <li class="progress-item">
-
-                <div class="label-wrapper">
-                  <p>Web Design</p>
-
-                  <span class="span">100 %</span>
-                </div>
-
-                <div class="progress">
-                  <div class="progress-fill" style="width: 100%; background-color: #c7b1dd"></div>
-                </div>
-
-              </li>
-
-              <li class="progress-item">
-
-                <div class="label-wrapper">
-                  <p>Mobile Design</p>
-
-                  <span class="span">80 %</span>
-                </div>
-
-                <div class="progress">
-                  <div class="progress-fill" style="width: 80%; background-color: #8caeec"></div>
-                </div>
-
-              </li>
-
-              <li class="progress-item">
-
-                <div class="label-wrapper">
-                  <p>Development</p>
-
-                  <span class="span">85 %</span>
-                </div>
-
-                <div class="progress">
-                  <div class="progress-fill" style="width: 85%; background-color: #b0d4c1"></div>
-                </div>
-
-              </li>
-
-              <li class="progress-item">
-
-                <div class="label-wrapper">
-                  <p>SEO</p>
-
-                  <span class="span">90 %</span>
-                </div>
-
-                <div class="progress">
-                  <div class="progress-fill" style="width: 90%; background-color: #e3a6b6"></div>
-                </div>
-
-              </li>
-
-            </ul> -->
-
           </div>
-
-          <!-- <ul class="grid-list">
-
-            <li data-reveal="bottom">
-              <div class="about-card">
-
-                <div class="card-icon">
-                  <img src="./assets/images/icon-1.svg" width="52" height="52" loading="lazy" alt="web design icon">
-                </div>
-
-                <h3 class="h4 card-title">Hobbies</h3>
-
-                <p class="card-text">
-                  blah
-                </p>
-
-              </div>
-            </li>
-
-            <li data-reveal="bottom" data-reveal-delay="0.25s">
-              <div class="about-card">
-
-                <div class="card-icon">
-                  <img src="./assets/images/icon-2.svg" width="52" height="52" loading="lazy" alt="mobile design icon">
-                </div>
-
-                <h3 class="h4 card-title">Beliefs</h3>
-
-                <p class="card-text">
-                  blah
-                </p>
-
-              </div>
-            </li> -->
-
-            <!-- <li data-reveal="bottom" data-reveal-delay="0.5s">
-              <div class="about-card">
-
-                <div class="card-icon">
-                  <img src="./assets/images/icon-3.svg" width="52" height="52" loading="lazy"
-                    alt="web development icon">
-                </div>
-
-                <h3 class="h4 card-title">Development</h3>
-
-                <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
-                  justo cum sociis natoque magnis.
-                </p>
-
-              </div>
-            </li>
-
-            <li data-reveal="bottom" data-reveal-delay="0.75s">
-              <div class="about-card">
-
-                <div class="card-icon">
-                  <img src="./assets/images/icon-4.svg" width="52" height="52" loading="lazy" alt="web seo icon">
-                </div>
-
-                <h3 class="h4 card-title">SEO</h3>
-
-                <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
-                  justo cum sociis natoque magnis.
-                </p>
-
-              </div>
-            </li> -->
 
           </ul>
 
@@ -357,13 +227,7 @@
 
             <div>
               <h2 class="h2 section-title" >Experience</h2>
-
-              <p class="section-text">
-                 <!-- Take a look at my internships and other experiences! -->
-              </p>
             </div>
-
-            <!-- <a href="#" class="btn btn-secondary">See All Projects</a> -->
 
           </div>
 
@@ -376,8 +240,6 @@
                 
                 <div class="card-content" data-reveal="left">
 
-                  <!-- <p class="card-tag" style="color: #a07cc5">Internships</p> -->
-
                   <h2 class="h3 card-title">Oak Ridge National Laboratory <br> (ORNL)</h2>
 
                   <p class="card-text">
@@ -386,7 +248,7 @@
                     my project and work there! 
                   </p>
 
-                  <a href="./Evans,Leah CCI Report with Abstract.pdf" class="btn-text internship-color" >
+                  <a href="./assets/documents/CCI Report with Abstract.pdf" class="btn-text internship-color" >
                     <span class="span">See Project Report</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -394,7 +256,7 @@
 
                   <br>
 
-                  <a href="./Evans_Leah Poster.jpg" class="btn-text internship-color" >
+                  <a href="./assets/images/Evans_Leah Poster.jpg" class="btn-text internship-color" >
                     <span class="span">See Project Poster</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -413,11 +275,6 @@
 
 
                 </div>
-
-                <!-- <figure class="card-banner" data-reveal="right">
-                  <img src="./assets/images/project-1.png" width="650" height="370" loading="lazy" alt="Web Design"
-                    class="w-100">
-                </figure> -->
 
               </div>
             </li>
@@ -438,81 +295,10 @@
                     love being a part of!
                   </p>
 
-                  <!-- <a href="#" class="btn-text" style="color: #3f78e0">
-                    <span class="span">See Project</span>
-
-                    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                  </a> -->
-
                 </div>
-
-                <!-- <figure class="card-banner" data-reveal="left">
-                  <img src="./assets/images/project-2.png" width="600" height="367" loading="lazy" alt="Web Design"
-                    class="w-100">
-                </figure> -->
 
               </div>
             </li>
-
-            <!-- <li>
-              <div class="project-card project-card-3" style="background-color: #f5faf7">
-
-                <div class="card-content" data-reveal="left">
-
-                  <p class=" card-tag" style="color: #7cb798">Web Design</p>
-
-                  <h3 class="h3 card-title">Missio Theme</h3>
-
-                  <p class="card-text">
-                    Maecenas faucibus mollis interdum sed posuere porta consectetur cursus porta lobortis. Scelerisque
-                    id ligula felis.
-                  </p>
-
-                  <a href="#" class="btn-text" style="color: #7cb798">
-                    <span class="span">See Project</span>
-
-                    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                  </a>
-
-                </div>
-
-                <figure class="card-banner" data-reveal="right">
-                  <img src="./assets/images/project-3.png" width="600" height="367" loading="lazy" alt="Web Design"
-                    class="w-100">
-                </figure>
-
-              </div>
-            </li>
-
-            <li>
-              <div class="project-card project-card-4" style="background-color: #fcf4f6">
-
-                <div class="card-content" data-reveal="left">
-
-                  <p class=" card-tag" style="color: #d16b86">Mobile Design</p>
-
-                  <h3 class="h3 card-title">Storage App</h3>
-
-                  <p class="card-text">
-                    Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque id ligula
-                    porta felis euismod semper.
-                  </p>
-
-                  <a href="#" class="btn-text" style="color: #d16b86">
-                    <span class="span">See Project</span>
-
-                    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                  </a>
-
-                </div>
-
-                <figure class="card-banner" data-reveal="right">
-                  <img src="./assets/images/project-4.png" width="620" height="370" loading="lazy" alt="Mobile Design"
-                    class="w-100">
-                </figure>
-
-              </div>
-            </li> -->
 
           </ul>
 
@@ -536,7 +322,7 @@
               </p>
             </div>
 
-           <a href="./Resume2023.docx" class="btn btn-primary" download="">Download Resume</a>
+           <a href="./assets/documents/Resume2023.docx" class="btn btn-primary" download="">Download Resume</a>
 
           </div>
         </div>
@@ -566,8 +352,6 @@
               </p>
 
             </div>
-
-            <!-- <div id="form-messages"></div> -->
 
             <form action="https://formspree.io/f/xoqzoqqr" method = "POST" class="contact-form" data-reveal="right">
 
@@ -606,40 +390,6 @@
         © 2022 codewithsadee. All rights reserved.
       </p>
 
-      <!-- <ul class="social-list">
-
-        <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-twitter"></ion-icon>
-          </a>
-        </li>
-
-        <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-facebook"></ion-icon>
-          </a>
-        </li>
-
-        <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-dribbble"></ion-icon>
-          </a>
-        </li>
-
-        <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-instagram"></ion-icon>
-          </a>
-        </li>
-
-        <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-youtube"></ion-icon>
-          </a>
-        </li>
-
-      </ul> -->
-
     </div>
   </footer>
 
@@ -650,7 +400,6 @@
   <!-- 
     - custom js link
   -->
-  <script src="jquery-2.1.0.min.js"></script>
   <script src="./assets/js/script.js"></script>
 
   <!-- 
