--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   -->
   <title>Leah - Student Developer.</title>
   <meta name="title" content="Leah - Student Developer.">
-  <!-- <meta name="description" content="This is a personal portfolio html template made by codewithsadee"> -->
+  <meta name="description" content="This is a personal portfolio html template made by codewithsadee">
 
   <!-- 
     - favicon
@@ -48,14 +48,14 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./L-letter-icon.png" width="64" height="24" alt="Leah home">
+        <img src="./assets/images/L-letter-icon.png" width="64" height="24" alt="Leah home">
       </a>
 
       <nav class="navbar" data-navbar>
 
         <div class="navbar-top">
           <a href="#" class="logo">
-            <img src="./L-letter-icon.png" width="64" height="24" alt="Leah home">
+            <img src="./assets/images/L-letter-icon.png" width="64" height="24" alt="Leah home">
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
@@ -84,46 +84,6 @@
           <li>
             <a href="#contact" class="navbar-link">Contact</a>
           </li>
-
-        </ul>
-
-        <!-- <div class="wrapper">
-          <a href="mailto:info@email.com" class="contact-link">leah28evans@gmail.com</a>
-
-          <a href="tel:001234567890" class="contact-link">00 (123) 456 78 90</a>
-        </div> -->
-
-        <ul class="social-list">
-
-          <!-- <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li> 
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-dribbble"></ion-icon>
-            </a>
-          </li> -->
-
-          <!-- <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-          </li> -->
-
-          <!-- <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-youtube"></ion-icon>
-            </a>
-          </li> -->
 
         </ul>
 
@@ -181,8 +141,6 @@
 
 
 
-
-
       <!-- 
         - #ABOUT
       -->
@@ -197,10 +155,13 @@
 
               <div class="about-txt" style="background-color: #fbf5f9">
                <p class="section-text" data-reveal="left">
-                 I am currently a computer science major and cybersecurity minor at University of Tennessee, Knoxville.
-                Having grown up in Knoxville, I love being able to call myself a Tennessee vol! I fell in love with
-                computer science at the beginning of college, and I am passionate about blah blah blah.
-
+                I am currently a junior pursuing a bachelor's degree in computer science with a minor in 
+                cybersecurity at the University of Tennessee, Knoxville and have a passion for computer 
+                systems and software development. I discovered computer science during my senior year in 
+                high school and found that not only was I proficient at it, I enjoyed it immensely and am 
+                always amazed at the possibilities it holds. I believe that computer science has a major 
+                role in expanding technology in industry, manufacturing, entertainment, exploration, etc. 
+                and am excited to see what the future holds for development! 
                 </p>
               </div>
             </div>
@@ -211,8 +172,6 @@
 
         </div>
       </section>
-
-
 
 
 
@@ -234,11 +193,12 @@
           <ul class="grid-list">
             
             <li>
-              <div class="project-card project-card-1" style="background-color: #f1f9fd">
+              <div class="project-card project-card-2" style="background-color: #f1f9fd">
 
-                <h3 class="project-card-title internship-color" data-reveal="left">Internships</h3>
+                <!-- <h3 class="project-card-title internship-color" data-reveal="left">Internships</h3> -->
                 
                 <div class="card-content" data-reveal="left">
+                  <h3 class="project-card-title internship-color" data-reveal="left">Internships</h3>
 
                   <h2 class="h3 card-title">Oak Ridge National Laboratory <br> (ORNL)</h2>
 
@@ -248,7 +208,7 @@
                     my project and work there! 
                   </p>
 
-                  <a href="./assets/documents/CCI Report with Abstract.pdf" class="btn-text internship-color" >
+                  <a href="./assets/documents/Evans,Leah CCI Report with Abstract.pdf" class="btn-text internship-color" >
                     <span class="span">See Project Report</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -270,9 +230,10 @@
                   <h3 class="h3 card-title">Knoxville Utilities Board <br> (KUB) </h3>
 
                   <p class="card-text">
-                    I am currently interning at KUB for the summer of 2023 as a student developer.
+                    I am currently interning at KUB for the summer of 2023 as a student developer on the
+                    customer apps team.
+                    <br>
                   </p>
-
 
                 </div>
 
@@ -305,10 +266,11 @@
         </div>
       </section>
 
+
+
       <!-- 
         - #RESUME
       -->
-
 
       <section class="section resume" id="resume">
         <div class="container">
@@ -327,6 +289,7 @@
           </div>
         </div>
       </section>
+
 
 
       <!-- 
@@ -377,8 +340,6 @@
 
 
 
-
-
   <!-- 
     - #FOOTER
   -->
@@ -392,8 +353,6 @@
 
     </div>
   </footer>
-
-
 
 
 
