--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div data-reveal="top">
               <h2 class="h2 section-title">About Me</h2>
 
-              <div class="about-txt" style="background-color: #fbf5f9">
+              <div class="about-txt" style="background-color: #fbf5f9; border: 2px solid rgb(194, 107, 169)">
                <p class="section-text" data-reveal="left">
                 I am currently a junior pursuing a bachelor's degree in computer science with a minor in 
                 cybersecurity at the University of Tennessee, Knoxville and have a passion for computer 
@@ -193,11 +193,10 @@
           <ul class="grid-list">
             
             <li>
-              <div class="project-card project-card-2" style="background-color: #f1f9fd">
-
-                <!-- <h3 class="project-card-title internship-color" data-reveal="left">Internships</h3> -->
+              <div class="project-card project-card-2" style="background-color: #f1f9fd; border: 2px solid #3f9de0">
                 
                 <div class="card-content" data-reveal="left">
+
                   <h3 class="project-card-title internship-color" data-reveal="left">Internships</h3>
 
                   <h2 class="h3 card-title">Oak Ridge National Laboratory <br> (ORNL)</h2>
@@ -241,7 +240,7 @@
             </li>
 
             <li>
-              <div class="project-card project-card-2" style="background-color: #f5faf7">
+              <div class="project-card project-card-2" style="background-color: #f5faf7;  border: 2px solid #7cb798">
 
                 <div class="card-content" data-reveal="right">
 
